# mini_auto_grad

./: README.md  pyproject.toml
src/mini_auto_grad/: engine.py  nn.py  visualize.py
src/mini_auto_grad/solution/: engine.py  nn.py
tests/: test_engine_arithmetic.py  test_engine_backwards.py  test_engine_complex.py  test_engine_topological_order.py  test_nn.py
tests/solution/: test_engine_arithmetic.py  test_engine_backwards.py  test_engine_complex.py  test_nn.py
