[tool.poetry]
name = "mini-auto-grad"
version = "0.1.0"
description = ""
authors = ["Jordi Smit <j0rd1smit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mini_auto_grad", from = "src"}]

[tool.poetry.dependencies]
python = "3.9.*"
torch = "1.11.*"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
